--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,8 @@
     "cra-template": "1.2.0",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^10.16.19",
+    "canvas-confetti": "^1.9.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
